#######################################################################
# Use This CMakeLists.txt To Add Your Source Windows Subfolder Cmakes #
#######################################################################

# Add Menu Entries
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GUI_Menu_File)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GUI_Menu_Window)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GUI_Menu_Debug)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/GUI_Menu_Settings)